--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ html {
 
 .title-container {
   height: 50px;
+  color: #fff;
 }
 
 .title-styles {
@@ -22,32 +23,40 @@ html {
   font-size: 250%;
 }
 
+header {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  background-image: url(https://images.unsplash.com/photo-1605478328994-f93e98217da7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1800&q=80);
+  background-size: cover;
+  background-position: center;
+  -webkit-background-size: cover;
+  text-align: center;
+  overflow: hidden;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  padding-bottom: 200px;
+}
+
+header h1 {
+  font-size: 400%;
+  text-align: center;
+  font-weight: 800 !important;
+  color: #fff;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin: 0 auto 18px auto;
+  width: 100%;
+}
+
 .header-icon {
   height: 150px;
   width: 150px;
 }
 
-header {
-  position: relative;
-  height: 520px;
-  min-height: 450px;
-  width: 100%;
-  background-size: cover;
-  -webkit-background-size: cover;
-  text-align: center;
-  overflow: hidden;
-  background-color: #e9d5a1;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  padding-top: 150px;
-  padding-bottom: 0;
-}
-
-.language-icon {
-  font-size: 50px;
-  cursor: pointer;
+.icons {
+  font-size: 400%;
+  margin: 9% 5% 0 5%;
 }
 
 .project-date {
@@ -68,23 +77,6 @@ header {
   width: 100px;
   margin: 5px 0 5px 0;
   border-radius: 8px;
-}
-
-.language {
-  font-size: 25px;
-  background-color: #e9d5a1;
-  padding-bottom: 10px;
-  padding-top: 80px;
-}
-
-header h1 {
-  font-size: 400%;
-  text-align: center;
-  font-weight: 600 !important;
-  color: #353239;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  margin: 0 auto 18px auto;
-  width: 100%;
 }
 
 .slider-image {
@@ -220,45 +212,23 @@ header h1 {
   background: #efe1bd;
 }
 
-.experience-icon {
-  font-size: 300%;
-  margin-top: 25%;
-  text-align: center;
-}
-
 .main-badge {
   font-size: 13px !important;
-  text-align: left !important;
-  padding: 5px 8px 5px 8px !important;
-  vertical-align: baseline;
   background-color: #AE944F !important;
-  color: white;
+  color: white !important;
   font-weight: lighter !important;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .experience-badge {
   font-size: 11px !important;
-  text-align: left !important;
-  padding: 5px 8px 5px 8px !important;
-  vertical-align: baseline;
   background-color: #f9f5e9 !important;
   color: black;
   font-weight: lighter !important;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .vertical-timeline-element-date {
   padding: 0 !important;
   margin: 0 !important;
-}
-
-@media only screen and (max-width: 1170px) {
-  .experience-icon {
-    font-size: 170%;
-    margin-top: 27%;
-    text-align: center;
-  }
 }
 
 .modal-inside .modal-content {
