--- a/src/App.css
+++ b/src/App.css
@@ -293,7 +293,8 @@ header h1 {
 
 .close-icon {
   color: black;
-  font-weight: lighter !important;
+  font-weight: bold !important;
+  font-size: large;
 }
 
 .modal-description {
