--- a/src/App.css
+++ b/src/App.css
@@ -80,11 +80,11 @@ header h1 {
 }
 
 .slider-image {
-  border: 5px solid #D7CAAA;
+  border: 5px solid #6a6a6a;
 }
 
 .slider-tab {
-  background-color: #D7CAAA;
+  background-color: #6a6a6a;
   padding: 5px;
   height: 25px;
 }
@@ -159,7 +159,7 @@ header h1 {
 
 .polaroid img {
   display: block;
-  max-width: 200px;
+  max-width: 230px;
 }
 
 .polaroid span {
